--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div><h1>Testimonials</h1></div>
+	<!--<h1>Testimonials</h1> no any major chnage in code if we willnot use there div tag with h1 tag-->
+	<div><h1>Testimonials</h1></div> 
+	
 	<div class="div">
 		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
 		<p class="right">-John Doe</p>
